# paaster

./: README.md  docker-compose.yml  inlang.config.js  package-lock.json  package.json  rclone-docker-example.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependabot.yml  dependency-review.yml  dev-python.yml  dev-vite.yml  prod-python.yml  prod-vite.yml  production.yml  pull-request.yml  python-checks.yml  vite-checks.yml
backend/: Dockerfile
backend/paaster/: pyproject.toml  run.py
backend/paaster/app/: env.py  main.py  resources.py
backend/paaster/app/controllers/: __init__.py  paste.py
backend/paaster/app/helpers/: paste.py  s3.py
backend/paaster/app/models/: paste.py
backend/paaster/tests/: test_paste.py
docker-selfhosted-s3/: .env.example  docker-compose.yml
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  replace_env_vars.sh  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend.old/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend.old/src/: main.ts
frontend.old/src/components/: LazyRoute.svelte  ProvideAccessCode.svelte  SetAccessCode.svelte
frontend.old/src/routes/: PrivacyPolicy.svelte  TermsOfService.svelte
frontend/src/: .d.ts  App.svelte  app.html  stores.ts
frontend/src/assets/: style.css
frontend/src/components/: Lazy.svelte  PageLoading.svelte  ProvideAccessCode.svelte  QRCode.svelte  RenamePaste.svelte  SetAccessCode.svelte
frontend/src/i18n/: de.json  en.json  fi.json  fr.json  hi.json  id.json  index.ts  (+13 more)
frontend/static/: style.css
paaster/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
paaster-backend/: .gitignore  Dockerfile  README.md  main.py  requirements.txt  run_server.py  run_tests.py
paaster-backend/paaster/: __init__.py  basic_auth.py  env.py  limiter.py  main.py  middleware.py  resources.py
paaster-backend/pastes/: 1fLr6W1VWwKmMqYwOvI_J.aes  82Xl2zGS__9vb0FCEHVg9.aes  OfHrUDaFdmYol8dE7g59m.aes  PpVawBU9DMR0KPoJxpGeS.aes  iXBpZ5xRz8GEQuxkgTmAp.aes  lR9ZyZebql3FvgNYDJ2er.aes  sH0RkjMZsFyZhjZbPStLL.aes  sn_ZZIGr2Qn2CJV_aO-qi.aes
paaster-frontend/: Dockerfile  global.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
paaster-frontend/.svelte-kit/: ambient.d.ts
paaster-frontend/src/: App.svelte  main.ts  store.ts
paaster/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
project.inlang/: project_id  settings.json
(+154 files in other folders)
