[tool.poetry]
name = "paaster"
version = "2.0.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.6.0"
bcrypt = "^4.2.0"
aiobotocore = "^2.15.2"
nanoid = "^2.0.0"
argon2-cffi = "^23.1.0"
types-aiobotocore-s3 = "^2.16.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
litestar = "^2.13.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
types-aiobotocore = "^2.15.2"
motor-types = "^1.0.0b4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
