[tool.poetry]
name = "paaster"
version = "2.0.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.6.0"
bcrypt = "^4.2.1"
aiobotocore = "^2.17.0"
nanoid = "^2.0.0"
argon2-cffi = "^23.1.0"
types-aiobotocore-s3 = "^2.17.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
litestar = "^2.14.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
types-aiobotocore = "^2.17.0"
motor-types = "^1.0.0b4"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
